[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/volcano_enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/VolcanoEnemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/VolcanoEnemyFSM.gd" type="Script" id=3]

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.3, 0.35, 0.5, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "rest"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.5, 13 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 88, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 14 )

[node name="VolcanoEnemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )
hframes = 2

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 6 )
anims/rest = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 3 )

[node name="PlayerDetect" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WalkDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="PushedDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="FlameSpawn" type="Position2D" parent="."]
position = Vector2( 0, -17 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="WalkDurationTimer" to="." method="_on_WalkDurationTimer_timeout"]
[connection signal="timeout" from="PushedDurationTimer" to="." method="_on_PushedDurationTimer_timeout"]
